# Recommended method in https://matklad.github.io/2021/08/22/large-rust-workspaces.html
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Tancrède Lepoint"]
documentation = "https://fhe.rs"
edition = "2021"
repository = "https://github.com/tlepoint/fhe.rs"
version = "0.1.0-beta.8"
license = "MIT"
rust-version = "1.73"

[workspace.dependencies]
clap = { version = "^4.5.51", features = ["derive"] }
tfhe-ntt = "^0.6.1"
console = "^0.16.1"
criterion = "^0.7.0"
doc-comment = "^0.3.3"
env_logger = "^0.11.3"
ethnum = "^1.5.0"
fastdiv = "^0.1.0"
indicatif = "^0.18.0"
itertools = "^0.14.0"
log = "^0.4.28"
ndarray = "^0.17.1"
num-bigint = "^0.4.4"
num-bigint-dig = "^0.9.1"
num-traits = "^0.2.18"
num-complex = { version = "^0.4.6", features = ["libm"] }
proptest = "^1.9.0"
prost = "^0.12.4"
prost-build = "^0.12.3"
pulp = "^0.21.5"
rand = "^0.9.2"
rand_chacha = "^0.9.0"
sha2 = "^0.10.8"
thiserror = "^1.0.58"
zeroize = "^1.8.2"
zeroize_derive = "^1.4.2"
once_cell = "^1.19.0"

