# Recommended method in https://matklad.github.io/2021/08/22/large-rust-workspaces.html
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Tancrède Lepoint"]
edition = "2021"
repository = "https://github.com/tlepoint/fhe.rs"
license = "MIT"
rust-version = "1.74" # MSRV for workspace lints

[workspace.lints.rust]
missing_docs = "warn"
unused_imports = "warn"
unused_must_use = "deny"

[workspace.dependencies]
clap = { version = "^4.5.53", features = ["derive"] }
tfhe-ntt = "^0.6.1"
console = "^0.16.2"
criterion = "^0.8.1"
doc-comment = "^0.3.4"
env_logger = "^0.11.3"
ethnum = "^1.5.0"
indicatif = "^0.18.3"
itertools = "^0.14.0"
log = "^0.4.29"
ndarray = "^0.17.1"
num-bigint = "^0.4.4"
num-bigint-dig = "^0.9.1"
num-traits = "^0.2.18"
num-complex = { version = "^0.4.6", features = ["libm"] }
proptest = "^1.9.0"
prost = "^0.14.1"
pulp = "^0.22.2"
rand = "^0.9.2"
rand_chacha = "^0.9.0"
sha2 = "^0.10.8"
thiserror = "^2.0.17"
zeroize = "^1.8.2"
zeroize_derive = "^1.4.3"

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
# Note: unneeded_field_pattern is intentionally not enabled because it conflicts
# with the defensive programming pattern of explicitly listing all struct fields
# in destructuring to ensure compiler catches when new fields are added.
fn_params_excessive_bools = "deny"
must_use_candidate = "warn"
