[package]
name = "crrust-math"
description = "Mathematical utilities for the crrust library"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tlepoint/crrust"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
itertools = "0.10.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "zq"
harness = false
