[package]
name = "crrust"
description = "Cryptographic building blocks for research prototypes"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tlepoint/crrust"
readme = "README.md"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]

