[package]
name = "bfv"
description = "The Brakerski-Fan-Vercauteren homomorphic encryption scheme"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tlepoint/fhe.rs"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
itertools = "0.10.3"
derive_builder = "0.11.2"
math = { version = "0.0.1", path = "../math" }
util = { version = "0.0.1", path = "../util" }
num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"
rand_chacha = "0.3.1"
zeroize = "1.5.7"
ndarray = "0.15.6"

[dev-dependencies]
criterion = "0.3.6"
proptest = "1.0.0"

[[bench]]
name = "ops"
harness = false
