[package]
name = "bfv"
description = "The Brakerski-Fan-Vercauteren homomorphic encryption scheme"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tlepoint/fhe.rs"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
itertools = "0.10.3"
math = { version = "0.0.1", path = "../math" }
util = { version = "0.0.1", path = "../util" }
num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"
rand_chacha = "0.3.1"
zeroize = "1.5.7"
zeroize_derive = "1.3.2"
ndarray = "0.15.6"
fhers_protos = { version = "0.0.1", path = "../protos" }
protobuf = "3.1.0"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "ops"
harness = false
