[package]
name = "crrust-math"
description = "Mathematical utilities for the crrust library"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tlepoint/crrust"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
itertools = "0.10.3"
num-bigint = {version = "0.8.1", package = "num-bigint-dig", features = ["prime"]}
num-traits = "0.2.15"
rand = "0.8.5"
rand_chacha = "0.3.1"
primitive-types = "0.11.1"

[dev-dependencies]
criterion = "0.3.6"
proptest = "1.0.0"

[[bench]]
name = "zq"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "rns"
harness = false
