[package]
name = "crrust"
description = "Cryptographic building blocks for research prototypes"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tlepoint/crrust"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
crrust-math = { version = "0.1.0", path = "../crrust-math" }
crrust-util = { version = "0.1.0", path = "../crrust-util" }
