[package]
name = "fhe-math"
description = "Mathematical utilities for the fhe.rs library"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
bench = false  # Disable default bench (we use criterion)

[features]
serde = ["dep:serde", "ndarray/serde", "num-bigint/serde", "rand/serde1", "rand_chacha/serde"]
concrete-ntt = []
concrete-ntt-nightly = ["concrete-ntt/nightly"]

[dependencies]
fhe-traits = { version = "^0.1.0-beta.8", path = "../fhe-traits" }
fhe-util = { version = "^0.1.0-beta.8", path = "../fhe-util" }

concrete-ntt.workspace = true
derivative = "^2.2.0"
ethnum.workspace = true
fastdiv.workspace = true
itertools.workspace = true
ndarray.workspace = true
num-bigint.workspace = true
num-bigint-dig.workspace = true
num-traits.workspace = true
prost.workspace = true
pulp = { git = "https://github.com/ashu-t3/pulp.git", features = ["serde"] }
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
zeroize.workspace = true
zeroize_derive.workspace = true
serde = { workspace = true, optional = true }
sha2.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "zq"
harness = false

[[bench]]
name = "rq"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "rns"
harness = false
