[package]
name = "fhe-math"
description = "Mathematical utilities for the fhe.rs library"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lib]
bench = false  # Disable default bench (we use criterion)

[features]
tfhe-ntt = []
tfhe-ntt-nightly = ["tfhe-ntt/nightly"]

[dependencies]
fhe-traits = { version = "=0.1.0", path = "../fhe-traits" }
fhe-util = { version = "=0.1.0", path = "../fhe-util" }

tfhe-ntt.workspace = true
ethnum.workspace = true
itertools.workspace = true
ndarray.workspace = true
num-bigint.workspace = true
num-bigint-dig.workspace = true
num-traits.workspace = true
prost.workspace = true
pulp.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
zeroize.workspace = true
sha2.workspace = true
num-complex.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "zq"
harness = false

[[bench]]
name = "rq"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "rns"
harness = false
