[package]
name = "fhe-traits"
description = "Traits for the fhe.rs library"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
rand.workspace = true
