[package]
name = "fhe-traits"
description = "Traits for the fhe.rs library"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
rand.workspace = true
