[package]
name = "fhe-util"
description = "Utilities for the fhe.rs library"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
itertools.workspace = true
num-bigint-dig = { workspace = true, features = ["prime"] }
num-traits.workspace = true
rand.workspace = true

[dev-dependencies]
proptest.workspace = true
