[package]
name = "fhers"
description = "Fully homomorphic encryption in Rust"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tlepoint/fhe.rs"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
bfv = { version = "0.0.1", path = "../bfv" }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5.3"
linya = "0.3.0"