[package]
name = "fhers"
description = "Fully homomorphic encryption in Rust"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tlepoint/fhe.rs"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
bfv = { version = "0.0.1", path = "../bfv" }
util = { version = "0.0.1", path = "../util" }

[dev-dependencies]
rayon = "1.5.3"
rand = "0.8.5"
ndarray = "0.15.6"
itertools = "0.10.3"
