[package]
name = "fhers"
description = "Fully homomorphic encryption in Rust"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tlepoint/fhe.rs"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
math = { version = "0.0.1", path = "../../internal/math" }
fhers-traits = { version = "0.0.1", path = "../fhers-traits" }
util = { version = "0.0.1", path = "../../internal/util" }

itertools = "0.10.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"
rand_chacha = "0.3.1"
zeroize = "1.5.7"
zeroize_derive = "1.3.2"
ndarray = "0.15.6"
protobuf = "3.1.0"
thiserror = "1.0.32"


[dev-dependencies]
utilities = { version = "0.0.1", path = "utilities" }

criterion = "0.3.6"
indicatif = "0.17.0"
itertools = "0.10.3"
ndarray = "0.15.6"
rand = "0.8.5"
