[package]
name = "math"
description = "Mathematical utilities for the fhers library"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tlepoint/fhe.rs"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
itertools = "0.10.3"
num-bigint = "0.4.3"
num-bigint-dig = "0.8.1"
num-traits = "0.2.15"
rand = "0.8.5"
rand_chacha = "0.3.1"
ndarray = "0.15.4"
util = { version = "0.0.1", path = "../util" }
fhers_protos = { version = "0.0.1", path = "../protos" }
protobuf = "3.1.0"

[dev-dependencies]
criterion = "0.3.6"
proptest = "1.0.0"

[[bench]]
name = "zq"
harness = false

[[bench]]
name = "rq"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "rns"
harness = false
