[package]
name = "utilities"
description = "Fully homomorphic encryption in Rust"
version = "0.1.0-beta.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tlepoint/fhe.rs"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
fhe = { version = "^0.1.0-beta.0", path = "../../", features=["leveled_bfv"] }
fhe-traits = { version = "^0.1.0-beta.0", path = "../../../fhe-traits" }
fhe-util = { version = "^0.1.0-beta.0", path = "../../../fhe-util" }
indicatif = "0.17.0"
ndarray = "0.15.6"
