[package]
name = "utilities"
description = "Fully homomorphic encryption in Rust"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tlepoint/fhe.rs"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
fhers = { version = "0.0.1", path = "../../" }
fhers-traits = { version = "0.0.1", path = "../../../fhers-traits" }
ndarray = "0.15.6"
indicatif = "0.17.0"
util = { version = "0.0.1", path = "../../../../internal/util" }
